# ScoreHiveCluster

./: .dockerignore  CMakeLists.txt  Dockerfile  docker-compose.yaml  get_answers.txt  hostfile  railway.toml  render.yaml  review.txt  run_build.sh  run_cluster.sh  run_info.sh  set_answers.txt  shutdown.txt
source/: main.cpp
source/domain/: answers.cpp  answers.hpp  coordinator.cpp  coordinator.hpp  evaluator.cpp  evaluator.hpp
source/server/: protocol.hpp  server.cpp  server.hpp
source/system/: aliases.hpp  environment.cpp  environment.hpp  logger.hpp
